--- a/Prueba.html
+++ b/Prueba.html
@@ -9,6 +9,7 @@
     <h1>Nuevo Modificado</h1>
 
     <form action="#" method="get">
+        <input type="text" name="firstName" id="firstName">
         <input type="button" value="Enviar">
     </form>
 </body>
