--- a/Prueba.html
+++ b/Prueba.html
@@ -9,7 +9,7 @@
     <h1>Nuevo Modificado</h1>
 
     <form action="#" method="get">
-        <input type="text" name="firstName" id="firstName">
+        <input type="number" name="firstName" id="firstName">
         <input type="text" name="lastName" id="lastName">
         <input type="number" name="age" id="age">
         <input type="button" value="Enviar">
