se añadio funcionalidad video

--- a/Prueba.html
+++ b/Prueba.html
@@ -15,6 +15,7 @@
         <img src="#" alt="Test img">
         <input type="date" name="birthdate" id="birthdate">
         <input type="button" value="Enviar">
+        <video src="cat.mp4"></video>
     </form>
 </body>
 </html>
